--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,17 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
+<header class="header">
+    <img class="logo" src="img/image.png" alt="html logo"/>
+    <h1 class="title">
+        Hello from Borys!
+    </h1>
+</header>
 
+<script src="vendor/jquery.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
