[BEM] - Optimized index : extract head content in shared file

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Do-While</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    @@include('./html/_head.html')
 </head>
 <body>
 
