[BEM] - Added bones of project-task-list page and make it default (include in index.html)

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    @@include('./html/_head.html')
-</head>
-<body>
-
-</body>
-</html>
+@@include('./project-task-list.html')
