--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,94 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Test page</title>
+	<title>Project list</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<h1>Testing livereload</h1>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam vero ratione nostrum rem voluptas praesentium, sed nulla officiis similique ipsum necessitatibus dolore
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum fugiat harum, beatae eligendi quidem perferendis
-	</p>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, molestiae nostrum omnis sint necessitatibus corporis modi pariatur officiis! Blanditiis, sequi.
-	</p>
-
-<!-- <header class="header">
-    <img class="logo" src="img/image.png" alt="html logo"/>
-    <h1 class="title">
-        Hello from Borys!
-    </h1>
-</header>
-
-<script src="vendor/jquery.min.js"></script>
-<script src="js/app.js"></script> -->
-
+	<header class="header">
+		<nav class="header-nav">
+			<div class="header-nav-options">
+				<img class="header-nav-options__menu" src="img/iconHamburger.png" height="18" width="20" alt="menu icon">
+			</div>
+			<div class="header-nav-title">
+				<div class="header-nav-title__text">WORK</div>
+			</div>
+			<div class="header-nav-add">
+				<img src="img/iconPlus.png" height="20" width="20" alt="add item icon" class="header-nav-add__plus">
+			</div>
+		</nav>
+	</header>
+	<main class="content">
+		<ul class="tasks">
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Lesson</div>
+					<div class="tasks-task-content__date">28 mar</div>
+				</div>
+				<div class="tasks-task-time">&nbsp;</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Do the home work</div>
+					<div class="tasks-task-content__date">29 mar</div>
+				</div>
+				<div class="tasks-task-time"></div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Buy food in Wallmart</div>
+					<div class="tasks-task-content__date">31 mar</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time__alarm">19:00</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Lesson</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time__measurement">12:43:34</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Do the home work</div>
+				</div>
+				<div class="tasks-task-time"></div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Buy food in Wallmart</div>
+					<div class="tasks-task-content__date">31 mar</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time__alarm">19:00</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Lesson</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time__measurement">12:43:34</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content__name">Do the home work</div>
+				</div>
+				<div class="tasks-task-time"></div>
+			</li>
+		</ul>
+	</main>
 </body>
 </html>
