--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
 <title>Do-While</title>
-<link rel="stylesheet" href="vendor/normalize.css"/>
+<link rel="stylesheet" href="vendor/css/normalize.css"/>
 <link rel="stylesheet" href="css/styles.css"/>
