[BEM] - Created header, pointing on project view

--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -4,6 +4,6 @@
     @@include('./html/_head.html')
 </head>
 <body>
-
+    @@include('./html/blocks/header.html', {"color": "header_blue", "text" : "work"})
 </body>
 </html>
