--- a/src/index.html
+++ b/src/index.html
@@ -19,75 +19,108 @@
 			</div>
 		</nav>
 	</header>
-	<main class="content">
+	<main>
 		<ul class="tasks">
 			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Lesson</div>
-					<div class="tasks-task-content__date">28 mar</div>
-				</div>
-				<div class="tasks-task-time">&nbsp;</div>
-			</li>
-			<li class="tasks-task">
 				<div class="tasks-task__checkbox">&nbsp;</div>
 				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Do the home work</div>
-					<div class="tasks-task-content__date">29 mar</div>
-				</div>
-				<div class="tasks-task-time"></div>
-			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Buy food in Wallmart</div>
-					<div class="tasks-task-content__date">31 mar</div>
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Lesson</div>
+						<div class="tasks-task-content-wrapper__date">28 MAR</div>
+					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time__alarm">19:00</div>
+					<div class="tasks-task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
 			<li class="tasks-task">
 				<div class="tasks-task__checkbox">&nbsp;</div>
 				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Lesson</div>
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+						<div class="tasks-task-content-wrapper__date">29 MAR</div>
+					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time__measurement">12:43:34</div>
+					<div class="tasks-task-time-wrapper"></div>
 				</div>
 			</li>
 			<li class="tasks-task">
 				<div class="tasks-task__checkbox">&nbsp;</div>
 				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Do the home work</div>
-				</div>
-				<div class="tasks-task-time"></div>
-			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Buy food in Wallmart</div>
-					<div class="tasks-task-content__date">31 mar</div>
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
+						<div class="tasks-task-content-wrapper__date">31 MAR</div>
+					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time__alarm">19:00</div>
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__alarm">19:00</div>
+					</div>
 				</div>
 			</li>
 			<li class="tasks-task">
 				<div class="tasks-task__checkbox">&nbsp;</div>
 				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Lesson</div>
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Lesson</div>
+					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time__measurement">12:43:34</div>
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+					</div>
 				</div>
 			</li>
 			<li class="tasks-task">
 				<div class="tasks-task__checkbox">&nbsp;</div>
 				<div class="tasks-task-content">
-					<div class="tasks-task-content__name">Do the home work</div>
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+					</div>
 				</div>
-				<div class="tasks-task-time"></div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper"></div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
+						<div class="tasks-task-content-wrapper__date">31 MAR</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__alarm">19:00</div>
+						<div class="tasks-task-time-wrapper__alarm">19:00</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Lesson</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper"></div>
+				</div>
 			</li>
 		</ul>
 	</main>
