[HTML Layouts] Change some styles for header

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper"></div>
+					<div class="tasks-task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
 			<li class="tasks-task">
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper"></div>
+					<div class="tasks-task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
 			<li class="tasks-task">
@@ -119,7 +119,7 @@
 					</div>
 				</div>
 				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper"></div>
+					<div class="tasks-task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
 		</ul>
