--- a/src/html/_head.html
+++ b/src/html/_head.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, ">
 <title>Do-While</title>
 <link rel="stylesheet" href="vendor/css/normalize.css"/>
 <link rel="stylesheet" href="css/styles.css"/>
