--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -4,6 +4,6 @@
     @@include('./html/_head.html')
 </head>
 <body>
-    @@include('./html/blocks/header.html', {"color": "header_blue", "text" : "work"})
+    @@include('./html/blocks/header.html', {"color" : "blue", "text" : "work", "title_icon": true})
 </body>
 </html>
