[HTML Layouts] Change and optimize some styles for header

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -8,15 +8,15 @@
 <body>
 	<header class="header">
 		<nav class="header-nav">
-			<div class="header-nav-options">
-				<img class="header-nav-options__menu" src="img/iconHamburger.png" height="18" width="20" alt="menu icon">
-			</div>
+			<button class="header-nav-options">&nbsp;
+				<!-- <img class="header-nav-options__menu" src="img/iconHamburger.png" height="18" width="20" alt="menu icon"> -->
+			</button>
 			<div class="header-nav-title">
 				<div class="header-nav-title__text">WORK</div>
 			</div>
-			<div class="header-nav-add">
-				<img src="img/iconPlus.png" height="20" width="20" alt="add item icon" class="header-nav-add__plus">
-			</div>
+			<button class="header-nav-add">&nbsp;
+				<!-- <img src="img/iconPlus.png" height="20" width="20" alt="add item icon" class="header-nav-add__plus"> -->
+			</button>
 		</nav>
 	</header>
 	<main>
