[HTML Layouts] Modified project-list.html

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -11,7 +11,7 @@
 			<button class="header-nav-options">&nbsp;
 				<!-- <img class="header-nav-options__menu" src="img/iconHamburger.png" height="18" width="20" alt="menu icon"> -->
 			</button>
-			<div class="header-nav-title">
+			<div class="header-nav-title header-nav-title_work">
 				<div class="header-nav-title__text">WORK</div>
 			</div>
 			<button class="header-nav-add">&nbsp;
