[HTML Layouts] connect font-face

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 	<header class="header">
-		<nav class="header-nav">
+		<nav class="header-nav header-nav_work">
 			<button class="header-nav-options">&nbsp;
 				<!-- <img class="header-nav-options__menu" src="img/iconHamburger.png" height="18" width="20" alt="menu icon"> -->
 			</button>
 			<div class="header-nav-title header-nav-title_work">
-				<div class="header-nav-title__text">WORK</div>
+				<div class="header-nav-title__text header-nav-title__text_projects">WORK</div>
 			</div>
 			<button class="header-nav-add">&nbsp;
 				<!-- <img src="img/iconPlus.png" height="20" width="20" alt="add item icon" class="header-nav-add__plus"> -->
