--- a/src/project-list.html
+++ b/src/project-list.html
@@ -8,15 +8,11 @@
 <body>
 	<header class="header">
 		<nav class="header-nav header-nav_work">
-			<button class="header-nav-options">&nbsp;
-				<!-- <img class="header-nav-options__menu" src="img/iconHamburger.png" height="18" width="20" alt="menu icon"> -->
-			</button>
-			<div class="header-nav-title header-nav-title_work">
+			<button class="header-nav__options header-nav__options_work">&nbsp;</button>
+			<div class="header-nav-title">
 				<div class="header-nav-title__text header-nav-title__text_projects">WORK</div>
 			</div>
-			<button class="header-nav-add">&nbsp;
-				<!-- <img src="img/iconPlus.png" height="20" width="20" alt="add item icon" class="header-nav-add__plus"> -->
-			</button>
+			<button class="header-nav__add header-nav__add_work">&nbsp;</button>
 		</nav>
 	</header>
 	<main>
