[BEM] - Refactor header block

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -3,7 +3,8 @@
         <span class="icon icon_hamburger @@if (color !== 'default') { icon_inverted }"></span>
     </button>
 
-    <div class="header-title">
+    <div class="header__title">
+        <span class="_middle-content"></span>
         @@text
         @@if (title_icon === true) {
         <span class="icon icon_create header-title__icon"></span>
