[BEM] - Added task-list basic layout

--- a/src/task-list.html
+++ b/src/task-list.html
@@ -4,6 +4,7 @@
     @@include('./html/_head.html')
 </head>
 <body>
-    @@include('./html/blocks/header.html', {"color": "default", "text" : "21 mar 2015", "title_icon": false})
+    @@include('./html/blocks/header.html', {"color": "default", "text" : "29 mar 2015", "title_icon": false})
+    @@include('./html/blocks/task-list.html', {})
 </body>
 </html>
