--- a/src/project-task-list.html
+++ b/src/project-task-list.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     @@include('./html/blocks/header.html', {"color" : "blue", "text" : "work", "title_icon": true})
+    @@include('./html/blocks/task-list.html', {})
 </body>
 </html>
