[HTML Layouts] task-list.html all done

--- a/src/task-list.html
+++ b/src/task-list.html
@@ -8,12 +8,132 @@
 <body>
 	<header class="header">
 		<nav class="header-nav">
-			<button class="header-nav-options">&nbsp;</button>
-			<div class="header-nav-title header-nav-title_today">
-				<header-nav-title__text>29 mar 2015</header-nav-title__text>
+			<button class="header-nav__options">&nbsp;</button>
+			<div class="header-nav-title">
+				<div class="header-nav-title__text">29 mar 2015</div>
 			</div>
-			<button class="header-nav-add">&nbsp;</button>
+			<button class="header-nav__add">&nbsp;</button>
 		</nav>
 	</header>
+	<main>
+		<ul class="tasks">
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Lesson</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__alarm">17:00</div>
+						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__alarm">17:00</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Gym</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__alarm">17:00</div>
+					</div>
+				</div>
+			</li>
+			<li class="tasks-task">
+				<div class="tasks-task__checkbox">&nbsp;</div>
+				<div class="tasks-task-content">
+					<div class="tasks-task-content-wrapper">
+						<div class="tasks-task-content-wrapper__name">Gym</div>
+						<div class="tasks-task-content-wrapper-project">
+							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+						</div>
+					</div>
+				</div>
+				<div class="tasks-task-time">
+					<div class="tasks-task-time-wrapper">
+						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</main>
 </body>
 </html>
