[HTML Layouts] Pull all colours into variables

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 	<header class="header">
-		<nav class="header-nav header-nav_work">
-			<button class="header-nav__options header-nav__options_work">&nbsp;</button>
+		<nav class="header-nav header-nav_project-3">
+			<button class="header-nav__options header-nav__options_project-3">&nbsp;</button>
 			<div class="header-nav-title">
 				<div class="header-nav-title__text header-nav-title__text_projects">WORK</div>
 			</div>
-			<button class="header-nav__add header-nav__add_work">&nbsp;</button>
+			<button class="header-nav__add header-nav__add_project-3">&nbsp;</button>
 		</nav>
 	</header>
 	<main>
