--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     </h1>
 </header>
 
+<button class="nav-button mod-project-nav"></button>
+
 <script src="vendor/jquery.min.js"></script>
 <script src="js/app.js"></script>
 </body>
