--- a/src/project-list.html
+++ b/src/project-list.html
@@ -10,7 +10,7 @@
 		<nav class="header-nav header-nav_project-3">
 			<button class="header-nav__options header-nav__options_project-3">&nbsp;</button>
 			<div class="header-nav-title">
-				<div class="header-nav-title__text header-nav-title__text_projects">WORK</div>
+				<div class="header-nav-title__text header-nav-title__text_projects">work</div>
 			</div>
 			<button class="header-nav__add header-nav__add_project-3">&nbsp;</button>
 		</nav>
@@ -22,7 +22,7 @@
 				<div class="tasks-task-content">
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Lesson</div>
-						<div class="tasks-task-content-wrapper__date">28 MAR</div>
+						<div class="tasks-task-content-wrapper__date">28 mar</div>
 					</div>
 				</div>
 				<div class="tasks-task-time">
@@ -34,7 +34,7 @@
 				<div class="tasks-task-content">
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Do the home work</div>
-						<div class="tasks-task-content-wrapper__date">29 MAR</div>
+						<div class="tasks-task-content-wrapper__date">29 mar</div>
 					</div>
 				</div>
 				<div class="tasks-task-time">
@@ -46,7 +46,7 @@
 				<div class="tasks-task-content">
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
-						<div class="tasks-task-content-wrapper__date">31 MAR</div>
+						<div class="tasks-task-content-wrapper__date">31 mar</div>
 					</div>
 				</div>
 				<div class="tasks-task-time">
@@ -84,7 +84,7 @@
 				<div class="tasks-task-content">
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
-						<div class="tasks-task-content-wrapper__date">31 MAR</div>
+						<div class="tasks-task-content-wrapper__date">31 mar</div>
 					</div>
 				</div>
 				<div class="tasks-task-time">
