--- a/src/task-list.html
+++ b/src/task-list.html
@@ -23,8 +23,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Lesson</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator project-1">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">education</div>
 						</div>
 					</div>
 				</div>
@@ -41,8 +41,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Do the home work</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator  project-1">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">education</div>
 						</div>
 					</div>
 				</div>
@@ -56,8 +56,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator project-2">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">home</div>
 						</div>
 					</div>
 				</div>
@@ -73,8 +73,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Gym</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator project-6">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">health</div>
 						</div>
 					</div>
 				</div>
@@ -90,8 +90,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Do the home work</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator  project-1">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">education</div>
 						</div>
 					</div>
 				</div>
@@ -105,8 +105,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator project-2">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">home</div>
 						</div>
 					</div>
 				</div>
@@ -122,8 +122,8 @@
 					<div class="tasks-task-content-wrapper">
 						<div class="tasks-task-content-wrapper__name">Gym</div>
 						<div class="tasks-task-content-wrapper-project">
-							<div class="tasks-task-content-wrapper-project__indicator">&nbsp;</div>
-							<div class="tasks-task-content-wrapper-project__name">asdf_asdfa</div>
+							<div class="tasks-task-content-wrapper-project__indicator project-6">&nbsp;</div>
+							<div class="tasks-task-content-wrapper-project__name">health</div>
 						</div>
 					</div>
 				</div>
