Added top line of project-list template

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -23,7 +23,7 @@
                 <button class="nav-batton nav-batton--mod-blue"></button>
             </div>
             <div class="top-line__title top-line__title--mod-blue">
-                <span>Work</span>
+                <span class="title-row">Work</span>
                 <button class="edit-project-button"></button>
             </div>
             <div class="top-line__add">
