--- a/src/task-list.html
+++ b/src/task-list.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     @@include('./html/blocks/header.html', {"color": "default", "text" : "29 mar 2015", "title_icon": false})
-    @@include('./html/blocks/task-list.html', {})
+    @@include('./html/blocks/today-task-list.html', {})
 </body>
 </html>
