[BEM] - Optimized file structure extract vars and mixins and reorganize units - Remake header layout (use table-cells)

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,17 +1,17 @@
-<header class="header header_@@color">
-    <button class="button button_@@color header__menu-button">
-        <span class="icon icon_hamburger @@if (color !== 'default') { icon_inverted }"></span>
+<header class="header color_@@color">
+    <button class="header__menu-button button color_@@color">
+        <i class="icon icon_hamburger @@if (color !== 'default') { icon_inverted }"></i>
     </button>
 
-    <div class="header__title">
-        <span class="_middle-content"></span>
-        @@text
+    <span class="header__title">
+        ahdhsakdlsssssssssskashdlksahdlkhlkdsalkhslkhalhaksadhsl
         @@if (title_icon === true) {
-        <span class="icon icon_create header-title__icon"></span>
+        <i class="icon icon_create header-title__icon"></i>
         }
-    </div>
+    </span>
 
-    <button class="button button_@@color header__add-task-button">
-        <span class="icon icon_plus @@if (color !== 'default') { icon_inverted }"></span>
+
+    <button class="header__add-task-button button color_@@color">
+        <i class="icon icon_plus @@if (color !== 'default') { icon_inverted }"></i>
     </button>
 </header>
