[HTML Layouts] Optimize styles and classes for header

--- a/src/task-list.html
+++ b/src/task-list.html
@@ -9,9 +9,7 @@
 	<header class="header">
 		<nav class="header-nav">
 			<button class="header-nav__options">&nbsp;</button>
-			<div class="header-nav-title">
-				<div class="header-nav-title__text">29 mar 2015</div>
-			</div>
+			<span class="header-nav__title">29 mar 2015</span>
 			<button class="header-nav__add">&nbsp;</button>
 		</nav>
 	</header>
