--- a/src/project-list.html
+++ b/src/project-list.html
@@ -8,11 +8,9 @@
 <body>
 	<header class="header">
 		<nav class="header-nav header-nav_project-3">
-			<button class="header-nav__options header-nav__options_project-3">&nbsp;</button>
-			<div class="header-nav-title">
-				<div class="header-nav-title__text header-nav-title__text_projects">work</div>
-			</div>
-			<button class="header-nav__add header-nav__add_project-3">&nbsp;</button>
+			<button class="header-nav__options">&nbsp;</button>
+			<span class="header-nav__title">work</span>
+			<button class="header-nav__add">&nbsp;</button>
 		</nav>
 	</header>
 	<main>
