Refactoring project-list.html and styles.css

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -14,155 +14,151 @@
         <div class="header__add"></div>
     </header>
 
-    <section class="project">
-        <ul class="project-list">
+    <ul class="project-list">
+        <li class="project-list__item">
+            <label for="chk1">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk1" name="chk1" type="checkbox" />
+            <span class="content">
+                <b>Lesson</b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk1" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk1">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Lesson</b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-            </li>
+        <li class="project-list__item">
+            <label for="chk2">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk2" name="height" type="checkbox" />
+            <span class="content">
+                <b>Do the home work </b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk2" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk2">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Do the home work </b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-            </li>
+        <li class="project-list__item">
+            <label for="chk3">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk3" name="height"  type="checkbox" />
+            <span class="content">
+                <b>Buy food in Wallmart</b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+            <div class="time-info">
+                <span class="datepicker">
+                    <span class="datepicker__notificator"></span>
+                    <b>19:00</b>
+                </span>
+            </div>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk3" name="height"  type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk3">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Buy food in Wallmart</b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-                <div class="project-list-item-watch">
-                    <span class="datepicker">
-                        <span class="datepicker__notificator"></span>
-                        <b>19:00</b>
-                    </span>
-                </div>
-            </li>
+        <li class="project-list__item">
+            <label for="chk4">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk4" name="height" type="checkbox" />
+            <span class="content">
+                <b>Lesson</b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+            <div class="time-info">
+                <span class="datepicker">
+                    <span class="datepicker__timer"></span>
+                    <b>12:43:34</b>
+                </span>
+            </div>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk4" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk4">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Lesson</b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-                <div class="project-list-item-watch">
-                    <span class="datepicker">
-                        <span class="datepicker__timer"></span>
-                        <b>12:43:34</b>
-                    </span>
-                </div>
-            </li>
+        <li class="project-list__item">
+            <label for="chk5">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk5" name="height" type="checkbox" />
+            <span class="content">
+                <b>Do the home work </b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk5" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk5">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Do the home work </b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-            </li>
+        <li class="project-list__item">
+            <label for="chk6">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk6" name="height" type="checkbox" />
+            <span class="content">
+                <b>Buy food in Wallmart</b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+            <div class="time-info">
+                <span class="datepicker">
+                    <span class="datepicker__notificator"></span>
+                    <b>19:00</b>
+                </span>
+            </div>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk6" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk6">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Buy food in Wallmart</b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-                <div class="project-list-item-watch">
-                    <span class="datepicker">
-                        <span class="datepicker__notificator"></span>
-                        <b>19:00</b>
-                    </span>
-                </div>
-            </li>
+        <li class="project-list__item">
+            <label for="chk7">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk7" name="height" type="checkbox" />
+            <span class="content">
+                <b>Lesson</b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+            <div class="time-info">
+                <span class="datepicker">
+                    <span class="datepicker__timer"></span>
+                    <b>12:43:34</b>
+                </span>
+            </div>
+        </li>
 
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk7" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk7">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Lesson</b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-                <div class="project-list-item-watch">
-                    <span class="datepicker">
-                        <span class="datepicker__timer"></span>
-                        <b>12:43:34</b>
-                    </span>
-                </div>
-            </li>
-
-            <li class="project-list-item">
-                <div class="project-list-item-content">
-                    <input class="project-list-item-content__checkbox-control" id="chk8" name="height" type="checkbox" />
-                    <label class="project-list-item-content-row" for="chk8">
-                        <div class="project-list-item-content-row__checkbox-icon"></div>
-                        <b>Do the home work </b>
-                        <br />
-                        <span class="datepicker">
-                            <span class="datepicker__calendar"></span>
-                            <b> 28 MAR</b>
-                        </span>
-                    </label>
-                </div>
-            </li>
-
-        </ul>
-    </section>
+        <li class="project-list__item">
+            <label for="chk8">
+                <div class="checkbox-icon"></div>
+            </label>
+            <input class="checkbox-control" id="chk8" name="height" type="checkbox" />
+            <span class="content">
+                <b>Do the home work </b>
+                <br />
+                <span class="datepicker">
+                    <span class="datepicker__calendar"></span>
+                    <b> 28 MAR</b>
+                </span>
+            </span>
+        </li>
+    </ul>
 
 
 </body>
