[HTML Layouts] Optimize project-list.html and styles for it

--- a/src/project-list.html
+++ b/src/project-list.html
@@ -14,106 +14,106 @@
 		</nav>
 	</header>
 	<main>
-		<ul class="tasks">
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Lesson</div>
-						<div class="tasks-task-content-wrapper__date">28 mar</div>
+		<ul class="task">
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Lesson</div>
+						<div class="task-item__date">28 mar</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Do the home work</div>
-						<div class="tasks-task-content-wrapper__date">29 mar</div>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Do the home work</div>
+						<div class="task-item__date">29 mar</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
-						<div class="tasks-task-content-wrapper__date">31 mar</div>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Buy food in Wallmart</div>
+						<div class="task-item__date">31 mar</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__alarm">19:00</div>
-					</div>
-				</div>
-			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Lesson</div>
-					</div>
-				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">
+						<div class="task-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Lesson</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">&nbsp;</div>
-				</div>
-			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Buy food in Wallmart</div>
-						<div class="tasks-task-content-wrapper__date">31 mar</div>
-					</div>
-				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__alarm">19:00</div>
-						<div class="tasks-task-time-wrapper__alarm">19:00</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">
+						<div class="task-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Lesson</div>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Do the home work</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">
-						<div class="tasks-task-time-wrapper__measurement">12:43:34</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">&nbsp;</div>
+				</div>
+			</li>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Buy food in Wallmart</div>
+						<div class="task-item__date">31 mar</div>
+					</div>
+				</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">
+						<div class="task-item__alarm">19:00</div>
+						<div class="task-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
-			<li class="tasks-task">
-				<div class="tasks-task__checkbox">&nbsp;</div>
-				<div class="tasks-task-content">
-					<div class="tasks-task-content-wrapper">
-						<div class="tasks-task-content-wrapper__name">Do the home work</div>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Lesson</div>
 					</div>
 				</div>
-				<div class="tasks-task-time">
-					<div class="tasks-task-time-wrapper">&nbsp;</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">
+						<div class="task-item__measurement">12:43:34</div>
+					</div>
+				</div>
+			</li>
+			<li class="task-item">
+				<div class="task-item__checkbox">&nbsp;</div>
+				<div class="task-content">
+					<div class="task-content-wrapper">
+						<div class="task-item__name">Do the home work</div>
+					</div>
+				</div>
+				<div class="task-time">
+					<div class="task-time-wrapper">&nbsp;</div>
 				</div>
 			</li>
 		</ul>
