--- a/src/project-list.html
+++ b/src/project-list.html
@@ -17,76 +17,76 @@
 		<ul class="task">
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Lesson</div>
 						<div class="task-item__date">28 mar</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">&nbsp;</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Do the home work</div>
 						<div class="task-item__date">29 mar</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">&nbsp;</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Buy food in Wallmart</div>
 						<div class="task-item__date">31 mar</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
 						<div class="task-item__alarm">19:00</div>
 					</div>
 				</div>
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Lesson</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
 						<div class="task-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Do the home work</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">&nbsp;</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Buy food in Wallmart</div>
 						<div class="task-item__date">31 mar</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
 						<div class="task-item__alarm">19:00</div>
 						<div class="task-item__alarm">19:00</div>
 					</div>
@@ -94,26 +94,26 @@
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Lesson</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">
+				<div class="task-item-time">
+					<div class="task-item-wrapper">
 						<div class="task-item__measurement">12:43:34</div>
 					</div>
 				</div>
 			</li>
 			<li class="task-item">
 				<div class="task-item__checkbox">&nbsp;</div>
-				<div class="task-content">
-					<div class="task-content-wrapper">
+				<div class="task-item-content">
+					<div class="task-item-wrapper">
 						<div class="task-item__name">Do the home work</div>
 					</div>
 				</div>
-				<div class="task-time">
-					<div class="task-time-wrapper">&nbsp;</div>
+				<div class="task-item-time">
+					<div class="task-item-wrapper">&nbsp;</div>
 				</div>
 			</li>
 		</ul>
